--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-	"name":         "rvhi-stops",
+	"name":         "hildesheim-stops",
 	"version":      "0.0.1",
 	"main":         "index.js",
 	"files":        ["index.js"],
 	"engines" :     {"node": ">=6"},
 	"dependencies": {
-		"efa-export-stops-by-coordinates": "^0.0.1"
+		"efa-export-stops-by-coordinates": "^0.1.0"
 	}
 }
